0622 메인페이지 초기세팅

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -4,7 +4,32 @@
 {% block content %} 
 
     <div id = "rec3">
-        
+
+        <table width="100%" height = "100%">
+            <tr>
+                <td rowspan = "2" style="width: 20%; vertical-align: top;padding-left: 10px;" class = "timetable">
+                    <h3>시간표</h3>
+
+                </td>
+                <td rowspan = "2" colspan = "2" style="width: 40%;vertical-align: top;padding-left: 10px;" class = "calendar">
+                    <h3>캘린더</h3>
+                </td>
+                <td rowspan = "2" colspan= "2" style="width: 40%; vertical-align: top;padding-left: 10px;" class = "running_mate">
+                    <h3>러닝메이트</h3>
+                </td>  
+            </tr>
+
+            <tr>
+
+            </tr>
+            <tr>
+                <td colspan="5" style="height: 35%; vertical-align: top;padding-left: 10px;">
+                    <h3>
+                        프로젝트 관리
+                    </h3>
+                </td>
+            </tr>
+        </table>
     </div>
 
 {% endblock %}
