0622 메인페이지 영역 나누기

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -7,15 +7,23 @@
 
         <table width="100%" height = "100%">
             <tr>
-                <td rowspan = "2" style="width: 20%; vertical-align: top;padding-left: 10px;" class = "timetable">
-                    <h3>시간표</h3>
+                <td rowspan = "2" style="width: 20%; vertical-align: top;" class = "timetable">
+                    <span id = "timetable_text">시간표</span>
+                    <div id = "timetable" >
+                        
+                    </div>
+                </td>
+                <td rowspan = "2" colspan = "2" style="width: 40%;vertical-align: top;" class = "calendar">
+                    <span id = "calendar_text">캘린더</span>
+                    <div id = "calendar">
 
+                    </div>
                 </td>
-                <td rowspan = "2" colspan = "2" style="width: 40%;vertical-align: top;padding-left: 10px;" class = "calendar">
-                    <h3>캘린더</h3>
-                </td>
-                <td rowspan = "2" colspan= "2" style="width: 40%; vertical-align: top;padding-left: 10px;" class = "running_mate">
-                    <h3>러닝메이트</h3>
+                <td rowspan = "2" colspan= "2" style="width: 40%; vertical-align: top;" class = "running_mate">
+                    <span id = runningmate_text>러닝메이트</span>
+                    <div id = "running_mate">
+
+                    </div>
                 </td>  
             </tr>
 
@@ -23,10 +31,13 @@
 
             </tr>
             <tr>
-                <td colspan="5" style="height: 35%; vertical-align: top;padding-left: 10px;">
-                    <h3>
+                <td colspan="5" style="height: 40%; vertical-align: top;" class = "project">
+                    <span id = "project_text">
                         프로젝트 관리
-                    </h3>
+                    </span>
+                    <div id = "project">
+
+                    </div>
                 </td>
             </tr>
         </table>
