--- a/runningmate/static/css/style.css
+++ b/runningmate/static/css/style.css
@@ -1,15 +1,35 @@
 @charset "UTF-8";
-
+@font-face {
+    font-family: "AppleSDGothicNeo";
+    src: url(../font/AppleSDGothicNeoM.ttf);
+}
 #rec3{
     position: absolute;
-    width: 1545px;
-    height: 1000px;
-    left: 335px;
-    top: 40px;
+    width: 80%;
+    height: 90%;
+    left: 17%;
+    top: 4%;
+    bottom: 4%;
     background: #F8F9FF;
     border-radius: 30px;
 }
 
-h1{
-    color:red;
+body{
+    background: #ECF0FF;
+}
+
+table{
+    font-family: "AppleSDGothicNeo";
+    font-style: normal;
+    font-weight: 400;
+
+}
+
+#timetable{
+    display: inline-block;
+    background: #FFFFFF;
+    border-radius: 20px;
+    left: 364px;
+    top: 135px;
+    height: 100%;
 }
