--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @font-face {
-    font-family: "AppleSDGothicNeo";
-    src: url(../font/AppleSDGothicNeoM.ttf);
+    font-family: "AppleSDGothicNeoB";
+    src: url(../font/AppleSDGothicNeoB.ttf);
 }
 #rec3{
     position: absolute;
@@ -15,13 +15,41 @@
 }
 
 body{
-
     background: #ECF0FF;
 }
 
-table{
-    font-family: "AppleSDGothicNeo";
-    font-style: normal;
-    font-weight: 400;
 
+
+#timetable, #calendar, #running_mate{
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    left: 364px;
+    top: 135px;
+    height: 85%;
+    margin:10px;
+    
+}
+
+#project{
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    left: 364px;
+    top: 135px;
+    margin:10px;
+    height: 75%;
+}
+
+#timetable_text, #calendar_text, #runningmate_text, #project_text{
+    margin-left:10px;
+    width: 90%;
+    font-family: "AppleSDGothicNeoB";
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 36px;
+    margin-top: 20px;
+
+}
+
+span{
+    display: inline-block;
 }
