--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -3,44 +3,23 @@
 
 {% block content %} 
 
-    <div id = "rec3">
-
-        <table width="100%" height = "100%">
-            <tr>
-                <td rowspan = "2" style="width: 20%; vertical-align: top;" class = "timetable">
-                    <span id = "timetable_text">시간표</span>
-                    <div id = "timetable" >
-                        
-                    </div>
-                </td>
-                <td rowspan = "2" colspan = "2" style="width: 40%;vertical-align: top;" class = "calendar">
-                    <span id = "calendar_text">캘린더</span>
-                    <div id = "calendar">
-
-                    </div>
-                </td>
-                <td rowspan = "2" colspan= "2" style="width: 40%; vertical-align: top;" class = "running_mate">
-                    <span id = runningmate_text>러닝메이트</span>
-                    <div id = "running_mate">
-
-                    </div>
-                </td>  
-            </tr>
-
-            <tr>
-
-            </tr>
-            <tr>
-                <td colspan="5" style="height: 40%; vertical-align: top;" class = "project">
-                    <span id = "project_text">
-                        프로젝트 관리
-                    </span>
-                    <div id = "project">
-
-                    </div>
-                </td>
-            </tr>
-        </table>
+<div id = "rec3">
+    <div class = "container">
+        <div class = "item" id = "timetable_text">시간표</div>
+        <div class = "item"></div>
+        <div class = "item" id = "calendar_text">캘린더</div>
+        <div class = "item"></div>
+        <div class = "item"></div>
+        <div class = "item"></div>
+        <div class = "item" id = "runningmate_text">러닝메이트</div>
+        <div class = "item"></div>
+        <div class = "item" id = "chatting_text">최근 채팅</div>
+        <div class = "item"></div>
+        <div class = "item"></div>
+        <div class = "item"></div>
+        <div class = "item" id = "project_text">프로젝트 관리</div>
+        <div class = "item"></div>
     </div>
+</div>
 
 {% endblock %}
