--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -3,6 +3,129 @@
     font-family: "AppleSDGothicNeoB";
     src: url(../font/AppleSDGothicNeoB.ttf);
 }
+.container{
+    display:grid;
+    grid-template-columns: 1fr 1.5fr 1.5fr;
+    grid-template-rows: 70px 1.5fr 60px 1fr 1fr 1fr 50px 2.5fr;
+    height: 100%;
+    row-gap: 10px;
+    column-gap: 20px;
+
+}
+
+.item:nth-child(1){
+    grid-column: 1 / 2;
+    grid-row : 1 / 2;
+    margin-top: 30px;
+    margin-left:20px;
+}
+
+.item:nth-child(2){
+    grid-column: 1 / 2;
+    grid-row : 2 / 7;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-left:20px;
+
+}
+
+.item:nth-child(3){
+    grid-column: 2 / 3;
+    grid-row : 1 / 2;
+    margin-top: 30px;
+}
+
+.item:nth-child(4){
+    grid-column: 2 / 3;
+    grid-row : 2 /5;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+
+}
+
+.item:nth-child(5){
+    grid-column: 2 / 3;
+    grid-row : 5 / 6;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+
+}
+
+.item:nth-child(6){
+    grid-column: 2 / 3;
+    grid-row : 6 / 7;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+
+}
+
+.item:nth-child(7){
+    grid-column: 3/ 4;
+    grid-row : 1 / 2;
+    margin-top: 30px;
+}
+
+
+.item:nth-child(8){
+    grid-column: 3 / 4;
+    grid-row : 2/3;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-right: 20px;
+
+}
+
+
+.item:nth-child(9){
+    grid-column: 3/4;
+    grid-row : 3/4;
+    margin-top: 20px;
+}
+.item:nth-child(10){
+    grid-column: 3/4;
+    grid-row : 4/5;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-right: 20px;
+
+}
+
+.item:nth-child(11){
+    grid-column: 3/4;
+    grid-row : 5/6;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-right: 20px;
+
+}
+
+.item:nth-child(12){
+    grid-column: 3/4;
+    grid-row : 6/7;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-right: 20px;
+
+}
+
+.item:nth-child(13){
+    grid-column: 1/4;
+    grid-row : 7/8;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.item:nth-child(14){
+    grid-column: 1/4;
+    grid-row : 8/9;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+
+}
+
 #rec3{
     position: absolute;
     width: 80%;
@@ -19,34 +142,10 @@ body{
 }
 
 
-
-#timetable, #calendar, #running_mate{
-    background-color: #FFFFFF;
-    border-radius: 20px;
-    left: 364px;
-    top: 135px;
-    height: 85%;
-    margin:10px;
-    
-}
-
-#project{
-    background-color: #FFFFFF;
-    border-radius: 20px;
-    left: 364px;
-    top: 135px;
-    margin:10px;
-    height: 75%;
-}
-
-#timetable_text, #calendar_text, #runningmate_text, #project_text{
-    margin-left:10px;
-    width: 90%;
+#timetable_text, #calendar_text, #runningmate_text, #chatting_text, #project_text{
     font-family: "AppleSDGothicNeoB";
     font-weight: 500;
     font-size: 22px;
-    line-height: 36px;
-    margin-top: 20px;
 
 }
 
