0623 캘린더페이지 기본셋팅

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -6,19 +6,48 @@
 <div id = "rec3">
     <div class = "container">
         <div class = "item" id = "timetable_text">시간표</div>
-        <div class = "item"></div>
+        <div class = "item" id = "timetable">
+            <img src = "{% static 'images/timetable.png' %}" id = "timetable_img"/>
+        </div>
+
+
         <div class = "item" id = "calendar_text">캘린더</div>
-        <div class = "item"></div>
-        <div class = "item"></div>
-        <div class = "item"></div>
+        <div class = "item" id = "calendar">
+            
+        </div>
+        <div class = "item" id = "schedule_1">
+
+        </div>
+        <div class = "item" id = "schedule_2">
+
+        </div>
+
+
+
         <div class = "item" id = "runningmate_text">러닝메이트</div>
-        <div class = "item"></div>
+        <div class = "item" id = "runningmate">
+
+        </div>
+
+
+
         <div class = "item" id = "chatting_text">최근 채팅</div>
-        <div class = "item"></div>
-        <div class = "item"></div>
-        <div class = "item"></div>
+        <div class = "item" id = "chatting_1">
+            
+        </div>
+        <div class = "item" id = "chatting_2">
+
+        </div>
+        <div class = "item" id = "chatting_3">
+
+        </div>
+
+
+
         <div class = "item" id = "project_text">프로젝트 관리</div>
-        <div class = "item"></div>
+        <div class = "item" id = "project">
+
+        </div>
     </div>
 </div>
 
