--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -152,3 +152,122 @@ body{
 span{
     display: inline-block;
 }
+
+#timetable_img{
+    display: flex;
+    margin:5%;
+    width: 90%;
+    height: 90%;
+
+}
+
+.container2{
+    display:grid;
+    grid-template-columns: 2fr 1.5fr 2fr;
+    grid-template-rows: 1fr 5fr 1fr 2.5fr 1.5fr 1.5fr 1.5fr 15px;
+    height: 100%;
+    row-gap: 10px;
+    column-gap: 20px;
+    font-family: AppleSDGothicNeoB;
+    font-weight: 500;
+    font-size: 22px;
+
+}
+.item2:nth-child(1){
+    grid-column: 1 / 4;
+    grid-row : 1 / 2;
+    margin-top: 30px;
+    margin-left:20px;
+}
+
+.item2:nth-child(2){
+    grid-column: 1 / 4;
+    grid-row : 2 / 3;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-left:20px;
+    margin-right: 20px;
+
+}
+
+.item2:nth-child(3){
+    grid-column: 1 / 2;
+    grid-row : 3 / 4;
+    margin-top: 20px;
+    margin-left:20px;
+}
+
+.item2:nth-child(4){
+    grid-column: 1 / 2;
+    grid-row : 4 / 7;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-left:20px;
+
+}
+
+.item2:nth-child(5){
+    grid-column: 1 / 2;
+    grid-row : 7 / 8;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-left:20px;
+
+}
+
+.item2:nth-child(6){
+    grid-column: 2 /4;
+    grid-row : 3/4;
+    margin-top: 20px;
+    margin-left:20px;
+
+}
+
+.item2:nth-child(7){
+    grid-column: 2/ 3;
+    grid-row : 4 / 5;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+
+}
+
+
+.item2:nth-child(8){
+    grid-column: 2 / 3;
+    grid-row : 5/6;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+
+
+}
+
+
+.item2:nth-child(9){
+    grid-column:2/3;
+    grid-row : 6/7;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+
+
+}
+.item2:nth-child(10){
+    grid-column: 2/3;
+    grid-row : 7/8;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+
+}
+
+.item2:nth-child(11){
+    grid-column: 3/4;
+    grid-row : 4/8;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    margin-right: 20px;
+
+
+}
+.item2:nth-child(12){
+    grid-column: 1/4;
+    grid-row : 8/9;
+}
