--- a/runningmate/runningmate/templates/base.html
+++ b/runningmate/runningmate/templates/base.html
@@ -6,12 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RunningMate</title>
-     
+    
         <link rel = "stylesheet" href = "{% static 'css/style.css' %}">
         
     </head>
     <body>
-        
+        {% include 'shared/_navbar.html' %}
         {% block content %}
         
 
