0623 메인페이지-프로젝트관리

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -46,6 +46,26 @@
 
         <div class = "item" id = "project_text">프로젝트 관리</div>
         <div class = "item" id = "project">
+            <div class="scroll--element" id = "subject1">
+                <h6 class="subject1">2022.03.12~2022.06.21</h6>
+                <h2 class="subject1"> IT 서비스 관리</h2>
+                <h3 class="subject1"> 인시던트 관리 프레임워크 기획</h3>
+            </div>
+            <div class="scroll--element" id= "subject2">
+                <h6>2022.03.12~2022.06.21</h6>
+                <h2> IT 서비스 관리</h2>
+                <h3> 인시던트 관리 프레임워크 기획</h3>
+            </div>
+            <div class="scroll--element" id = "subject3">
+                <h6>2022.03.12~2022.06.21</h6>
+                <h2> IT 서비스 관리</h2>
+                <h3> 인시던트 관리 프레임워크 기획</h3>
+            </div>
+            <div class="scroll--element" id = "subject4">
+                <h6>2022.03.12~2022.06.21</h6>
+                <h2> IT 서비스 관리</h2>
+                <h3> 인시던트 관리 프레임워크 기획</h3>
+            </div>
 
         </div>
     </div>
