--- a/runningmate/runningmate/templates/base.html
+++ b/runningmate/runningmate/templates/base.html
@@ -7,13 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RunningMate</title>
     
-        <link rel = "stylesheet" href = "{% static 'css/style.css' %}">
+        <link rel = "stylesheet" href = "{% static 'css/style.css' %}?after">
         
     </head>
     <body>
         {% include 'shared/_navbar.html' %}
         {% block content %}
-        
+        <div class="logo">
+            <img src="{% static 'images/simbathonlogo.png' %}" id="simbathonlogo_img"/>
+        </div>
+        <div class="logo">learningmate</div>
 
         {% endblock %}
 
