--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -13,6 +13,11 @@
     font-family: "AppleSDGothicNeoM";
     src: url(../font/AppleSDGothicNeoM.ttf);
 }
+
+@font-face {
+    font-family: "AppleSDGothicNeoEB";
+    src: url(../font/AppleSDGothicNeoEB.ttf);
+}
 .container{
     display:grid;
     grid-template-columns: 1fr 1.5fr 1.5fr;
@@ -81,7 +86,7 @@
     grid-row : 2/3;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-right: 20px;
+    margin-right: 2em;
 
 }
 
@@ -96,7 +101,7 @@
     grid-row : 4/5;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-right: 20px;
+    margin-right: 2em;
 
 }
 
@@ -105,7 +110,7 @@
     grid-row : 5/6;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-right: 20px;
+    margin-right: 2em;
 
 }
 
@@ -114,7 +119,7 @@
     grid-row : 6/7;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-right: 20px;
+    margin-right: 2em;
 
 }
 
@@ -128,7 +133,7 @@
 .item:nth-child(14){
     grid-column: 1/4;
     grid-row : 8/9;
-    margin-right: 20px;
+    margin-right: 2em;
     margin-bottom: 20px;
     margin-left: 1.5em;
 
@@ -153,7 +158,7 @@ body{
 #timetable_text, #calendar_text, #runningmate_text, #chatting_text, #project_text{
     font-family: "AppleSDGothicNeoB";
     font-weight: 500;
-    font-size: 22px;
+    font-size: 2.3vmin;
 
 }
 
@@ -169,6 +174,7 @@ span{
 
 }
 
+/*캘린더 테이블 배치*/
 .container2{
     display:grid;
     grid-template-columns: 2fr 1.5fr 2fr;
@@ -178,14 +184,14 @@ span{
     column-gap: 20px;
     font-family: AppleSDGothicNeoB;
     font-weight: 500;
-    font-size: 22px;
+    font-size: 2.3vmin;
 
 }
 .item2:nth-child(1){
     grid-column: 1 / 4;
     grid-row : 1 / 2;
     margin-top: 30px;
-    margin-left:20px;
+    margin-left:2em;
 }
 
 .item2:nth-child(2){
@@ -194,7 +200,7 @@ span{
     background-color: #FFFFFF;
     border-radius: 20px;
     margin-left:20px;
-    margin-right: 20px;
+    margin-right: 2em;
 
 }
 
@@ -202,7 +208,7 @@ span{
     grid-column: 1 / 2;
     grid-row : 3 / 4;
     margin-top: 20px;
-    margin-left:20px;
+    margin-left:2em;
 }
 
 .item2:nth-child(4){
@@ -210,7 +216,7 @@ span{
     grid-row : 4 / 7;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-left:20px;
+    margin-left:2em;
 
 }
 
@@ -219,7 +225,7 @@ span{
     grid-row : 7 / 8;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-left:20px;
+    margin-left:2em;
 
 }
 
@@ -227,7 +233,6 @@ span{
     grid-column: 2 /4;
     grid-row : 3/4;
     margin-top: 20px;
-    margin-left:20px;
 
 }
 
@@ -271,7 +276,7 @@ span{
     grid-row : 4/8;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-right: 20px;
+    margin-right: 2em;
 
 
 }
@@ -280,6 +285,7 @@ span{
     grid-row : 8/9;
 }
 
+/*mainpage : 프로젝트 관리*/
 
 #project{
     overflow-x:auto; white-space:nowrap;
@@ -289,10 +295,10 @@ span{
     width:27%; 
     height:100%; 
     border-radius: 20px;
+    margin-left:15px;
 }
 
 
-.scroll--element ,.scroll--element {margin-left:15px;}
 
 #subject1{
     background: #50CFBC;
@@ -307,8 +313,12 @@ span{
 }
 #subject4{
     background: #FFBC54;
-
 }
+
+#subject5{
+    background: #735BF2;
+}
+
 
 ::-webkit-scrollbar { /*스크롤 안보이게*/
     display: none;
@@ -323,7 +333,7 @@ span{
     font-weight: 100;
     line-height: 20.42px;
     margin-bottom: 0;
-    font-size: 1em;
+    font-size: 1.6vmin;
 }
 .scroll--element>h2{
     color: white;
@@ -336,7 +346,7 @@ span{
     font-weight: 100;
     line-height: 20.42px;
     margin-top: 0.5em;
-    font-size: 2.3em;
+    font-size: 3.8vmin;
 }
 
 .scroll--element>h3{
@@ -347,3 +357,196 @@ span{
     line-height: 29px;
     margin-left: 0.9em;
 }
+
+
+/*mainpage : 러닝메이트*/
+#runningmate{
+    overflow-x:auto; white-space:nowrap;
+}
+.friend{
+    display: inline-block;
+    border-radius: 50%;
+    width: 80%;
+    height: 80%;
+    margin :10px;
+    margin-top: 0;
+    margin-bottom: 0;
+
+}
+
+#f1{
+    display: inline-block;
+    width: 7em;
+    height: 75%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    vertical-align: middle;
+}
+#friend1{
+    background-color: #FE7782;
+    background-image: url(../images/memoji.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#friend2{
+    background-color: #FFBC54;
+    background-image: url(../images/memoji2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#friend3{
+    background-color: #FE7782;
+    background-image: url(../images/memoji3.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#friend4{
+    background-color: #45BFFF;
+    background-image: url(../images/memoji4.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#friend5{
+    background-color: #50CFBC;
+    background-image: url(../images/memoji5.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#friend6{
+    background-color: #FFBC54;
+    background-image: url(../images/memoji.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+#f1>h4{
+    text-align:center; 
+    margin: 0;
+    font-family: AppleSDGothicNeoM;
+    font-weight: 500;
+   
+}
+
+
+/*메인페이지 - 캘린더*/
+.calendar * {
+    box-sizing: border-box;
+  }
+
+.calendar {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    
+}
+.cal_main{
+    font-family: AppleSDGothicNeoB;
+    font-size: 1.5vmin;
+}
+
+.cal_main2{/*캘린더 페이지 캘린더*/
+    font-family: AppleSDGothicNeoB;
+    font-size: 1.7vmin;
+}
+.calander_body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cal_header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: "AppleSDGothicNeoB" ;
+    font-size: 2vmin;
+    line-height: 29px;
+    justify-content: center;
+    margin-left: 70px;
+}
+
+.cal_header2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: "AppleSDGothicNeoB" ;
+    font-size: 2vmin;
+    line-height: 29px;
+    justify-content: center;
+    margin-left: 15%;
+}
+
+.year-month {
+    font-size: 1.1em;
+    font-family:AppleSDGothicNeoEB;
+}
+  
+.nav-btn {
+    width: 28px;
+    height: 30px;
+    border: 1px solid #DDDDDD;
+    font-size: 16px;
+    line-height: 34px;
+    background-color: transparent;
+    cursor: pointer;
+    font-family: "AppleSDGothicNeoB" ;
+    border-radius: 8px;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+  
+.go-today {
+    width: 60px;
+    border: 1px solid #DDDDDD;
+    background-color: white;
+    cursor: pointer;
+    font-family: "AppleSDGothicNeoB" ;
+    margin: 0;
+}
+
+.days {
+    display: flex;
+    margin: 10px 0 10px;
+    color: #9C9D9F;
+}
+  
+.day {
+    width: calc(100% / 7);
+    text-align: center;
+}
+  
+.dates {
+    display: flex;
+    flex-flow: row wrap;
+    height: 3%;
+    margin-top: 0;
+
+}
+  
+.date {
+    width: calc(100% / 7);
+    padding-bottom : 15px;
+    text-align: center;
+}
+
+.other {
+    color: #9C9D9F;
+    opacity: .5;
+}
+
