--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -47,12 +47,12 @@
 
         <div class = "item" id = "runningmate_text">러닝메이트</div>
         <div class = "item" id = "runningmate">
-            <div id = "f1" style="margin-left: 1em;"><div class = "friend" id = "friend1"></div><h4>강슬기</h4></div>
-            <div id = "f1"><div class = "friend" id = "friend2"></div><h4>김준서</h4></div>
-            <div id = "f1"><div class = "friend" id = "friend3"></div><h4>김영서</h4></div>
-            <div id = "f1"><div class = "friend" id = "friend4"></div><h4>김예준</h4></div>
-            <div id = "f1"><div class = "friend" id = "friend5"></div><h4>김준성</h4></div>
-            <div id = "f1"><div class = "friend" id = "friend6"></div><h4>이예나</h4></div>
+            <div id = "f1" style="margin-left: 3vmin;"><div class = "friend" id = "friend1"></div><h4>이영서</h4></div>
+            <div id = "f2"><div class = "friend" id = "friend2"></div><h4>오준서</h4></div>
+            <div id = "f3"><div class = "friend" id = "friend3"></div><h4>윤영서</h4></div>
+            <div id = "f4"><div class = "friend" id = "friend4"></div><h4>김성준</h4></div>
+            <div id = "f5"><div class = "friend" id = "friend5"></div><h4>류슬기</h4></div>
+            <div id = "f6"><div class = "friend" id = "friend6"></div><h4>이예나</h4></div>
         </div>
 
 
