--- a/runningmate/runningmate/templates/shared/_navbar.html
+++ b/runningmate/runningmate/templates/shared/_navbar.html
@@ -1,10 +1,10 @@
 <!-- navbar -->
 <ul class="nav flex-column">
     <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
+        <a class="nav-link active" aria-current="page" href="{% url 'mateapp:showmain' %}">대시보드</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="{% url 'mateapp:calendar' %}">캘린더</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
