--- a/runningmate/runningmate/templates/base.html
+++ b/runningmate/runningmate/templates/base.html
@@ -7,7 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RunningMate</title>
     
-        <link rel = "stylesheet" href = "{% static 'css/style.css' %}?after">
+        <link rel = "stylesheet" type="text/css" href = "{% static 'css/style.css' %}?after">
+        <link rel = "stylesheet" type="text/css" href = "{% static 'css/calender.css' %}?after">
         
     </head>
     <body>
