0628 로그인 페이지 구현

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -101,6 +101,6 @@
         </div>
     </div>
 </div>
-<!-- github ++-->
+<a href="{% url 'account_logout' %}"><img id = "logout_button" src =  "{% static 'images/logout.png' %}"/></a>
 
 {% endblock %}
