--- a/runningmate/mateapp/templates/mateapp/login.html
+++ b/runningmate/mateapp/templates/mateapp/login.html
@@ -1,10 +1,16 @@
 {% load socialaccount %}
 {% providers_media_js %}
-	
-{% if user.is_authenticated %}
-	<a href="{% url 'account_logout' %}">로그아웃</a><br>
-{% else %}
-	<a href="{% url 'account_login' %}">로그인</a>
-	<a href="{% url 'account_signup' %}">회원가입</a>
-	<a href="{% provider_login_url 'google' %}">구글 로그인</a><br>
-{% endif %}
+
+{% load static %}
+
+
+<link rel = "stylesheet" href = "{% static 'css/login.css' %}?after">
+<div class = "login">
+	<form method="POST" action="{% url 'account_login' %}">
+		{% csrf_token %} 
+		<div class = "login_logo"><div id = "login_logo"></div>learningmate</div>
+		<p><input type="text" name="login" placeholder="  아이디" autocomplete="username" maxlength="150" required="" id="login_id"></p>
+		<p><input type="password" name="password" placeholder="  비밀번호" autocomplete="current-password" required="" id="login_password"></p>
+		<p id="pop"><input id="login_submit" type="submit" value="로그인하기"></p>
+	</form>
+</div>
