--- a/runningmate/mateapp/templates/mateapp/login.html
+++ b/runningmate/mateapp/templates/mateapp/login.html
@@ -11,6 +11,8 @@
 		<div class = "login_logo"><div id = "login_logo"></div>learningmate</div>
 		<p><input type="text" name="login" placeholder="  아이디" autocomplete="username" maxlength="150" required="" id="login_id"></p>
 		<p><input type="password" name="password" placeholder="  비밀번호" autocomplete="current-password" required="" id="login_password"></p>
-		<p id="pop"><input id="login_submit" type="submit" value="로그인하기"></p>
+		<input id="login_submit" type="submit" value="로그인하기"></p>
+		<a href="{% url 'account_signup' %}">회원가입</a>
+		<a href="{% provider_login_url 'google' %}">구글 
 	</form>
 </div>
