--- a/runningmate/mateapp/templates/mateapp/calendarDay.html
+++ b/runningmate/mateapp/templates/mateapp/calendarDay.html
@@ -1,8 +1,8 @@
 <!-- 페이지네이션
 {% if posts.has_previous %}
-<!-- 여기 아래마다  -->
+여기 아래마다 
 <a href="?page=1"></a> 
 <a href="?page={{posts.previous_page_number}}">이전 페이지</a>
 
 
-<!-- {% endblock %} -->
+{% endblock %}
