--- a/runningmate/mateapp/templates/mateapp/login.html
+++ b/runningmate/mateapp/templates/mateapp/login.html
@@ -13,6 +13,6 @@
 		<p><input type="password" name="password" placeholder="  비밀번호" autocomplete="current-password" required="" id="login_password"></p>
 		<input id="login_submit" type="submit" value="로그인하기"></p>
 		<a href="{% url 'account_signup' %}">회원가입</a>
-		<a href="{% provider_login_url 'google' %}">구글 
+		<a href="{% provider_login_url 'google' %}">구글</a>
 	</form>
 </div>
