--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -7,7 +7,11 @@
     <div class = "container">
         <div class = "item" id = "timetable_text">시간표</div>
         <div class = "item" id = "timetable">
-            <img src = "{% static 'images/timetable.png' %}" id = "timetable_img"/>
+            <form action="{% url 'mateapp:timetable' %}" method="POST" enctype="multipart/form-data">
+                {%csrf_token%}
+                <input type="file" name="timetable" id="timetable" accept="image/png">
+                <input type="submit" value="시간표 추가하기">
+            </form>
         </div>
 
 
