--- a/runningmate/runningmate/templates/socialaccount/signup.html
+++ b/runningmate/runningmate/templates/socialaccount/signup.html
@@ -12,7 +12,12 @@
 
 <form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  이메일 : {{ form.as_p }}
+  <!-- 성 : {{ form.last_name }}
+  이름 : {{ form.first_name }}
+  휴대폰번호 : {{ form.phone }}
+  MBTI : {{ form.mbti }}
+  한줄소개 {{ form.intro }} -->
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
