--- a/runningmate/runningmate/static/css/login.css
+++ b/runningmate/runningmate/static/css/login.css
@@ -26,7 +26,7 @@
 
 html, body{
     height: 100%;
-    background-color: #ECF0FF;
+    width: 100%;
 }
 
 .login{
@@ -39,6 +39,7 @@ html, body{
     width: 100%;
     background-color: #ECF0FF;
     font-family: AppleSDGothicNeoB;
+    margin: 0;
 }
 #login_logo{
     width: 50px;
@@ -62,13 +63,16 @@ html, body{
     display: flex;
     align-items: center;
     color: #252525;
+    
 }
 
 #login_id, #login_password{
     background-color: #FBF9FF;
     width: 250px;
     font-family: "AppleSDGothicNeoM";
-    border: 2px solid #9C9D9F;
+    border: 1px solid #8F9BB3;
+    border-radius: 5px;
+    height: 35px;
 }
 
 #login_submit{
@@ -77,6 +81,8 @@ html, body{
     background-color: #735BF2;
     color: white;
     border: none;
+    border-radius: 5px;
+    height: 35px;
 
 }
 
