navbar branch 변경 전 navbar 로고 수정

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -114,7 +114,7 @@
 //     document.querySelectorAll(".marg_text")[a].classList.toggle("dec_show");
 // };
 
-// 실력 부족으로 일단 코드 간소화 실패해서 임시 방편으로 처리했습니다.
+// css링크 연결 불가 현상, 코드 간소화 실패해서 임시 방편 처리
 document.getElementById("cb1").addEventListener("click", function(){
     document.getElementById("marg_text1").classList.toggle("dec_show");
 });
