0630 프로젝트 관리 플 추가

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -74,7 +74,10 @@
 
 
 
-        <div class = "item" id = "project_text">프로젝트 관리</div>
+        <div class = "item" id = "project_text">프로젝트 관리
+            <section id = "plus" >+</section>
+        </div>
+
         <div class = "item" id = "project">
             <div class="scroll--element" id = "subject1">
                 <h6>2022.03.12~2022.06.21</h6>
