0630 프로젝트 관리 플러스  추가

--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -367,6 +367,7 @@ span{
     display: inline-block; 
     font-size:larger; 
     vertical-align: middle;
+    cursor: pointer;
 }
 /*mainpage : 러닝메이트*/
 #runningmate{
