--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -42,16 +42,28 @@
         <div class = "item2" id = "today_date">
             
         </div>
+
+        <!-- 디데이 -->
         <div class = "item2" id = "dday1">
-            
+            <section class = "subject_name" id = "dday1_subject"></section>
+            <section  class = "meeting_subject" id = "dday1_meeting"></section>
+            <section  class = "count_dday" id = "dday1_dday"></section>
+            <script src="{% static 'js/dday.js'%}"></script>
         </div>
         <div class = "item2" id = "dday2">
-            
+            <section  class = "subject_name" id = "dday2_subject"></section>
+            <section  class = "meeting_subject" id = "dday2_meeting"></section>
+            <section  class = "count_dday" id = "dday2_dday"></section>
+            <script src="{% static 'js/dday.js'%}"></script>
         </div>
         <div class = "item2" id = "dday3">
-            
+            <section  class = "subject_name" id = "dday3_subject"></section>
+            <section  class = "meeting_subject" id = "dday3_meeting"></section>
+            <section  class = "count_dday" id = "dday3_dday"></section>
+            <script src="{% static 'js/dday.js'%}"></script>
         </div>
 
+         <!-- 체크리스트 -->
         <div class = "item2" id = "marg_bottom">
             <div class="detail_1">
                 <p class="syn_1">IT 서비스 관리</p>
@@ -106,6 +118,7 @@
 </div>
 
 <script>
+
 //     document.querySelectorAll(".cb")[0].addEventListener("click", function(e){
 //         clickCheckbox(e.target.dataset.id);
 //     });
