--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -37,7 +37,9 @@
         <div class = "item2" id = "calendar2_2">
             
         </div>
-        <div class = "item2" id = "today">투데이</div>
+        <div class = "item2" id = "today">투데이
+            <a href="#" onclick="window.open('todolist','todolist','resizable=no width=600 height=500');return false" style="text-decoration-line: none;">+</a>
+        </div>
 
         <div class = "item2" id = "today_date">
             
